ho aggiunto qualcosa ma ho ancora sonno

--- a/esercitazione2-main/nome-app/src/app/app.html
+++ b/esercitazione2-main/nome-app/src/app/app.html
@@ -42,6 +42,6 @@
 </style>
 
 <!-- Componente Esploratore Meteo -->
-<app-freetogame-explorer></app-freetogame-explorer>
+<app-weather-explorer></app-weather-explorer>
 
 <router-outlet />
